/*
  Localizable.en.strings
  CutBox

  Created by Jason Milkins on 15/4/18.
  Copyright © 2019-2023 ocodo. All rights reserved.
*/

"about_cutbox_copyright_licence" = "Copyright © 2018-2023 Jason Milkins\nLicensed under GPL3";
"about_cutbox_home_url" = "https://cutbox.github.io";
"about_cutbox_title" = "CutBox";
"confirm_warning_clear_history" = "Warning: You cannot undo this operation";
"confirm_warning_clear_history_title" = "Clear CutBox history?";
"context_menu_favorite" = "Toggle Favorite";
"context_menu_remove_selected" = "Remove Selected";
"cutbox_menu_about" = "About CutBox";
"cutbox_menu_clear_history" = "Clear History";
"cutbox_menu_compactui" = "Compact UI";
"cutbox_menu_hide_preview" = "Hide Preview";
"cutbox_menu_fuzzy_match" = "Fuzzy Match";
"cutbox_menu_preferences" = "Preferences";
"cutbox_menu_quit" = "Quit";
"cutbox_menu_regexp_any_case" = "Regexp any case";
"cutbox_menu_regexp_case_match" = "Regexp case match";
"cutbox_menu_search_cutbox" = "Search CutBox";
"js_func_search_placeholder" = "Paste through Javascript...";
"preferences_color_theme_reload_themes" = "Reload themes";
"preferences_color_theme_title" = "Color theme";
"preferences_history_destructive_limit_change_warning_description" = "Changing the CutBox history limit\nwill discard items beyond the new limit\n\nYou cannot undo this!\n\nIf you're sure, click OK";
"preferences_history_destructive_limit_change_warning_title" = "Reduce Pasteboard History Limit?";
"preferences_history_is_using_format" = "Currently using: %@";
"preferences_history_limit_checkbox_label" = "Unlimited";
"preferences_history_limit_placeholder" = "Limit (0 is unlimited)";
"preferences_history_limit_title" = "History Limit";
"preferences_history_select_option" = "Select an option";
"preferences_history_clear_last_5_minutes" = "Clear Last 5 Minutes";
"preferences_history_clear_last_hour" = "Clear Last Hour";
"preferences_history_clear_last_24_hours" = "Clear Last 24 Hours";
"preferences_history_clear_older_than_7_days" = "Clear Older Than 7 Days";
"preferences_history_clear_older_than_30_days" = "Clear Older Than 30 Days";
"preferences_history_clear_entire_history" = "Clear Entire CutBox History";
"preferences_history_clear_history_button" = "Clear History";
"preferences_javascript_clear_button" = "Clear";
"preferences_javascript_repl_help" = "CutBox JS REPL:\n\nhelp ENTER, for help\n\n";
"preferences_javascript_transform_reload" = "Reload ~/.cutbox.js";
"preferences_javascript_transform_section_note" = "Use this to help debug your ~/.cutbox.js";
"preferences_javascript_transform_section_title" = "Javascript";
"preferences_launch_on_login" = "Launch on Login";
"preferences_launch_on_login_tooltip" = "CutBox can start when you login to macOS";
"preferences_multi_clip_join_and_wrap_section_note" = "You can select multiple items from CutBox history and paste them all at once";
"preferences_multi_clip_join_and_wrap_section_title" = "Joining and Wrapping";
"preferences_multi_clip_join_title" = "Join using";
"preferences_multi_clip_joined_by_newline" = "New line";
"preferences_multi_clip_joined_by_string" = "Text";
"preferences_multi_clip_joined_by_string_placeholder" = "Join each clip with?";
"preferences_multi_clip_wrapped_checkbox_label" = "Wrap text around joined clips?";
"preferences_multi_clip_wrapped_end_placeholder" = "End with?";
"preferences_multi_clip_wrapped_start_placeholder" = "Start with?";
"preferences_protect_favorites" = "Protect favorites";
"preferences_protect_favorites_tooltip" = "Protect favorites if you clear history";
"preferences_show_all_hidden_dialog_boxes_button_title" = "Show hidden dialog boxes";
"preferences_show_all_hidden_dialog_boxes_button_tootip" = "Show all dialog boxes set to 'Do not show'";
"preferences_tab_view_general" = "General";
"preferences_tab_view_display" = "Display";
"preferences_tab_view_advanced" = "Advanced";
"preferences_tab_view_javascript" = "Javascript";
"preferences_title" = "CutBox Preferences";
"preferences_toggle_cutbox" = "Toggle CutBox";
"preferences_toggle_cutbox_tooltip" = "Choose a keyboard shortcut to show/hide CutBox";
"preferences_use_compact_ui" = "Use Compact UI";
"preferences_use_compact_ui_tooltip" = "Compact UI hides history items and paste preview until you begin searching or press right or up";
"preferences_hide_preview" = "Hide Preview";
"preferences_hide_preview_tooltip" = "Hides the preview panel";
"search_placeholder" = "Search CutBox";
"search_scope_all" = "Search everything";
"search_scope_favorites"  = "Search favorites";
"search_scope_tooltip_all" = "Search entire history";
"search_scope_tooltip_favorites" = "Search favorites only";
"searchmode_fuzzy" = "Fuzzy match ";
"searchmode_fuzzy_tooltip" = "Fuzzy match search";
"searchmode_regexp" = "RegExp/i";
"searchmode_regexp_strict" = "RegExp";
"searchmode_regexp_strict_tooltip" = "Regular expression search (strict case)";
"searchmode_regexp_tooltip" = "Regular expression search (case insensitive)";
"search_time_filter_label_active" = "Search only items copied between now and %@ ago";
"search_time_filter_label_hint" = "Enter time as N time-unit, e.g. 1 week, 2 days, 1h, 20 min etc.";
"search_time_filter_label_no_timestamp" = "\"none\": Searches only old items pre v1.5.5"
