...
                                                            <rect key="frame" x="0.0" y="0.0" width="492" height="401"/>
                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                            <size key="intercellSpacing" width="3" height="1"/>
                                                            <color key="backgroundColor" white="1" alpha="0.0" colorSpace="deviceWhite"/>
                                                            <color key="gridColor" white="1" alpha="0.0" colorSpace="deviceWhite"/>
                                                            <tableColumns>
                                                                <tableColumn identifier="icon" width="19" minWidth="19" maxWidth="19" id="HgV-Um-Zdu">
                                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                                                        <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                    </tableHeaderCell>
                                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="RgJ-Un-esz">
                                                                        <font key="font" metaFont="system"/>
...
            <connections>
                <outlet property="bottomBar" destination="Elj-qC-DgK" id="TLS-5x-Rz7"/>
                <outlet property="container" destination="2wd-Z7-k0t" id="rWB-qr-Awu"/>
                <outlet property="historyScopeImageButton" destination="GES-NZ-iAa" id="963-PP-bHK"/>
                <outlet property="iconImageView" destination="Zhs-Ng-XLx" id="c3E-tJ-Oo8"/>
                <outlet property="itemsList" destination="0vd-d6-rKt" id="4u9-5e-y45"/>
                <outlet property="jsIconButton" destination="29J-mY-iGz" id="Wfc-pr-vbs"/>
                <outlet property="mainBottomConstraint" destination="cof-vQ-XnJ" id="h20-pC-mwI"/>
                <outlet property="mainContainer" destination="IVV-sS-zG8" id="6X8-YW-KC9"/>
                <outlet property="mainLeadingConstraint" destination="Bye-gs-Wxw" id="Ikb-Ma-WNO"/>
                <outlet property="mainTopConstraint" destination="Tcg-PK-nOx" id="K20-bR-Ozh"/>
                <outlet property="mainTrailingConstraint" destination="hAD-TB-FDp" id="Fah-DL-V89"/>
                <outlet property="preview" destination="eKA-mf-B4d" id="7xo-Bz-YwI"/>
...
